--- a/practice.css
+++ b/practice.css
@@ -1,6 +1,6 @@
 h1 {
   font-size: 50px;
-  color: blue;
+  color: purple;
   font-family: Sans-serif;
 }
 
@@ -11,6 +11,6 @@ h2 {
 
 p {
   text-align: center;
-  text-shadow: 1px 1px 1px green;
+  text-shadow: 1px 111px 1px green;
   font-size: 20px;
 }
